[project]
authors = [{name = "T145"}]
dependencies = []
description = "Merge LLMs based on their layer SNR"
name = "spectrum_merge"
requires-python = "< 3.13"
version = "1.0.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["nvidia", "conda-forge", "pytorch", "huggingface"]
platforms = ["win-64"]

[tool.pixi.pypi-dependencies]
spectrum_merge = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
pytorch = ">=2.5.1,<3"
pytorch-cuda = "12.4.*"
